<resources>
    <string name="app_name">Benalmadena</string>
    <string name="osa_adress">• AVD GAMONAL 7 PARKING OPPOSITE AGUILA APPARTAMENT \n• AVD. ANTONIO MACHADO 56 LOCAL 5 \n• AVD. GAMONAL 11 NUEVA PLAZA BONANZA ESC 1 LOCAL 4</string>
    <string name="belgien_corner_1"><b>HALF PRICE AT JUST 2.50€!</b> (Normally 5€)</string>
    <string name="flamenco">Flamenco Benalmadena awarded a Certificate of Excellence. Due to good performance in delivering the best flamenco in Benalmadena and Costa del Sol in general. It has also been attracting a huge number of people.</string>
    <string name="flamenco1">Come and join us on Friday for a fun wine tasting followed by our famous Gypsy Kings tribute show with the delightful Jaime accompanied by our guitarist! \n\nTickets cost 15 euros and include a tasting of 3 Spanish wines plus a free glass of wine to enjoy with the show, perhaps accompanied by a tapa of delicious cheese or ham. We are child-friendly, and there’s also the chance to learn a few dance steps. \n<i>A Limited number of tickets available.</i></string>
    <string name="flamenco2">Flamenco Benalmádena is the perfect setting to experience unique and authentic flamenco! Our artists have been professionally trained in the Andalusian city of Seville, the birthplace of flamenco. They have now brought their skill and passion to the heart of the Costa del Sol to offer unmissable performances for tourists and local residents alike. \n\n<b>Flamenco Benalmádena is delighted to offer "Flamenco Tradicional”, our signature traditional flamenco performance.</b>\n\nThe show lasts over an hour and features between three and four artists. It is performed in a traditional way that is unique every time and different to other shows on offer elsewhere, ensuring an unforgettable experience. Buy tickets before and get a special offer : A free drink \n<b>Date: Saturday at 8 pm</b>\n<b>Price: 15 euros</b>\n<i>A Limited number of tickets because we want to take care of traditional flamenco.</i>\n\n<b>Private events, weddings and flamenco classes</b>\nWe are also available for organised events, you can hire our able services to spread out the cheer, class and glamour to those in attendance. Do you have a group of people you would like to entertain any other day apart from Saturday? Then you are sorted out, we are available for any private events.
</string>
    <string name="art_hair"><b>OFFER 1.</b>\n(lavar y peinar) labio superior gratis. \n(depilación con el hilo o cera) \n<b>(Wash and blow dry)</b> \nMoustache free with cord or wax. \n\n<b>OFFER 2.</b> \n(tinte y lavar y peinar) labio superior y la ceja gratis. \n(a elegir con la cera o el hilo) \n<b>(colour and wash and blow dry)</b> \nmoustache and eyebrows free (wax or string). \n\n<b>OFFER 3.</b> \n(Tinte y corte y peinar) la ceja y el rostro con el hilo gratis. \n<b>(colour and cut and blow dry)</b> \nEyebrows and full face with wax or string.</string>
    <string name="la_fista">Welcome to La Fiesta, Bar and Tapas Cafe in the heart of Benalmadena, located just down from Hotel Bali. \n\nYou\'re ensured a warm welcome with live sky sports, fantastic tapas dishes and brilliant cocktails as well as a great selection of beers, wines and spirits. </string>
    <string name="the_salon">Hi I\'m Jesse originally from Bristol. I\'ve been barbering since I was 16 years old. I would like to offer a discount to all Benalmadena residents. Haircut normally 12€ - but for residents who mention Discover Benalmadena ONLY 10€. \n\nI also do a great facial steam cleanse and cut throat shave, so if you want to look and feel amazing but at a really competitive price give The Salon a call for the ultimate male grooming experience.</string>
    <string name="history_benal">In the beginning God created Benalmadena! Well not quite, but Benalmadena and the surrounding area has had a long and checkered past. \n\nIn the 7th century BC, the Phoenicians arrived followed by the Romans in the early part of the 8th century AD. But the name Benalmadena came from the Moors who arrived later in the 8th century. The original name wa Ben-Al-Madina, which in Arabic translated as "children of the mines". At that time there were many iron ore and ochre mines in the area. \n\nThe 14th century saw the population diminish due to the many coastal attacks by the infamous Barbary pirates. In 1485 the Moorish Benalmadena castle was destroyed by the Christian armies. The castle stood on the site now occupied by by the Santa Domingo church in Benalmadena Pueblo. The church was originally constructed in the 17th century. \n\n Benalmadena became an important defence from seaboune raids in the 15th century, and was known as Vigia de la Costa, or "lookout for the coast". The towns coat of arms still portrays this today. Three look out towers were built, (torres), and the remains can still be seen. One is situated in Benalmadena Costa, near the marina, and is called Torre Bermeja. The other two are at Torrequebrada and Torremuelle respectively. \n\Probably the worst disaster the area had seen happened in 1680 when an earthquake occurred. No houses were left standing and the fishing boats were destroyed by the following tsunami.
 \n\nIn the late 18th century, the population started to recover when an Italian named Felix Solesio opened paper mills in the area of Arroyo de la Miel in 1784. The ruins of one of these can be seen today in Plaza Tribuna, which is adjacent to Plaza Espana in Arroyo. This lasted for around thirty years until Felix Solesio became bankrupt. The next phase was the cultivation of Muscatel grapes which lasted until the late 1800s, when the Phylloxera epidemic struck and ruined all the vines. \n\nWe then come to the early 1960s when the package holiday tourists started to arrive on the Costa del Sol by the planeload from northern Europe. The La Roca was the first hotel built in the town but was quickly followed by many more. In 1972 work started on the construction of the marina, and Tivoli World theme park opened in 1973. The marina opened in 1982 followed by Paloma Park in the late 1980s. \n\n<i>Reproduced with kind permission from benalmadena-arroyo.com</i></string>
    <string name="banal_costa"><b>Home to the majority of the main attractions of which the first to mention should probably be the beautiful sandy beaches and the deep blue Mediterranean Sea. </b> \n\nA wide range of restaurants and bars to suit all tastes and budgets can be found in abundance and the area has a relaxed and very family friendly vibe all year round. \n\nAnother of the main attractions to be found in Benalmadena Costa is the wonderful Puerto Marina. The marina is a great spot for Shopping and eating out as well as looking at the luxury yachts and celebrity spotting.</string>
    <string name="banal_costa1">The marina also plays host to the Sea Life Centre to get up close and personal to our friends in the sea.</string>
    <string name="banal_costa2">La Paloma Park is also worthy of a mention right in the centre of Benalmadena Costa. The Park is beautifully set out with landscaped gardens and waterfalls which all run down to the main lake. With a wonderful array of animals and exotic birds this truly is a must visit attraction. \n\nBeside the park you will find Selwo Marina where you can get up close to Dolphins, Sea Lions, Crocodiles and much more</string>
    <string name="arroyo"><b>Arroyo de la Miel is the central town that links Benalmadena Pueblo to the Costa. Arroyo is a thriving hub and a great area for Shopping and Eating. The train station can be found here which links the town all along the coast from Malaga to Fuengirola.</b> \n\nOne of the main attractions in Arroyo is the Cable Car which takes you to the top of the mountain so you can enjoy a mesmorising panoramic view of the the area both inland and out to sea. North Africa can be seen on clear days.</string>
    <string name="arroyo1">As you come out of the cable car station you will find another of Arroyo’s attractions Tivoli World which offers family thrill seeking fun set in beautiful gardens with illuminated fountains and even its own currency. On a Friday the Car Park at Tivoli World hosts the main market.</string>
    <string name="banal_pueblo"><b>The Pueblo is the original village and still maintains its Spanish charm. With beautiful whitewashed buildings and flowers and a abundance of alleys and traditional squares.</b> \n\nPlaza Espana is the main square in the Pueblo and is home to La Nina who has become the symbol of Benalmadena. Other attractions to note here are the beautiful Colomares Castle</string>
    <string name="banal_pueblo1">which also boasts the worlds smallest chapel, The Benalmadena Stupa which is the largest monument of it’s kind in Europe and has amazing views over the coast. Entrance to the Stupa is free. </string>
    <string name="banal_pueblo2">Also worth a visit is the Butterfly park which has around 1600 butterflies in a tropicalized environment and is also the largest of its kind in Europe.</string>
    <string name="aqualand">What a day out! The biggest water park on the Coast del Sol is a family-focused water park with lots of slides, rapids &amp; a surf beach area with wave machine and doesn\'t disappoint!</string>
    <string name="aqualand1">Fun for all the family is guaranteed with faster rides for the teens and big kids such as Boomarang! Anaconda and Twister and more leisurely rides and areas like Laguna Tropical and Children\'s Paradise with the ever popular Surf Beach including wave machine and sun beds.</string>
    <string name="transport">Getting around the local area couldn\'t be easier with the local public transport letting you get out and see attractions further afield without the hassle and expense of a hire car.</string>
    <string name="transport1">There are frequent buses to and from Benalmadena with cheaper than UK fares which can also be booked online.</string>
    <string name="transport2">Trains are a great way to get around the local area, again with cheaper than UK fares, air-con, plus announcements and signage in English as well as Spanish.</string>
    <string name="medical"><b>Hospital de Alta Resolución</b>\nOpen from 08:00 - 20:00 Mon - Fri\nThe clinic accepts patients living or staying in the postcode area 29631 and others.\nCL MERCURIO, URB. PUEBLOSOL, s/n\nARROYO DE LA MIEL-BENALMADENA\nTel: 951 920 720</string>
    <string name="medical1"><b>Arroyo de la Miel Clinic</b>\nOpen 24 hours.The hospital accepts patients from all parts of Benalmadena.\nAVDA. DEL ARROYO HONDO, s/n\nARROYO DE LA MIEL-BENALMADENA\nTel: 951 976 000\nEmergencies: 902 505 061</string>
    <string name="medical2"><b>Torrequebrada Clinic</b>\nOpen from 08:00 - 20:00 Mon - Fri\nThe clinic accepts patients living or staying in the postcode area 29630\nwhich is where most of the hotels and apartments are situated.\nCL SOL, TORREQUEBRADA\nTel: 951 308 120</string>
    <string name="medical3"><b>Other Local Facilities</b>\n\n<b>Hospitals:</b>\nMarbella Costa Del Sol – Tel: +34 952 828 250\nBenalmadena Chare – Tel: + 34 951 976 000\nCarlos De Haya – Tel: +34 951 290 000\nChip Hospital (private) - Tel: +34 951 011 150\nClinic Malaga University – Tel: +34 951 032 000\nXanit – Tel: +34 952 367 190\n\n<b>Heath Centres:</b>\nCentral De Salud\nTorrequebrada, Benalmadena – Tel: +34 951 308 120\nArroyo De La Miel – Tel: +34 951 920 720\nCalle San Miguel, Torremolinos – Tel: + 34 951 924 100\nLa Carihuela, Torremolinos – Tel: + 34 951 920 920\nSalud Responde (General Call Centre) Will Direct you to all – Tel: +34 902 505 060\n</string>
</resources>